[gd_scene load_steps=9 format=3 uid="uid://cebdebfptql0p"]

[ext_resource type="Script" uid="uid://bia2hodc02em6" path="res://scenes/scripts/scenes/main_menu.gd" id="1_6bivr"]
[ext_resource type="Texture2D" uid="uid://cm3hf5jhllhca" path="res://assets/ui/background.jpg" id="2_imvie"]
[ext_resource type="Theme" uid="uid://bputefyu2uixu" path="res://globals/pixel_font.tres" id="3_imvie"]
[ext_resource type="PackedScene" uid="uid://c4fgpbww4k2xd" path="res://scenes/user interface/full_screen_button.tscn" id="3_ng0o5"]
[ext_resource type="PackedScene" uid="uid://dj5aio8r1dai2" path="res://scenes/user interface/mute_button.tscn" id="4_8r73w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fsby3"]
texture = ExtResource("2_imvie")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_all2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_all2k"]
bg_color = Color(1, 0.894118, 0.388235, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 4

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6bivr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fsby3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -485.0
offset_top = 65.0
offset_right = -81.0
offset_bottom = 153.0
grow_horizontal = 0
theme = ExtResource("3_imvie")
theme_override_font_sizes/font_size = 75
text = "DokiJam2025"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 76.0
offset_top = 69.0
offset_right = 502.0
offset_bottom = 397.0
theme = ExtResource("3_imvie")
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_focus_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_all2k")
theme_override_styles/normal = SubResource("StyleBoxFlat_all2k")
text = "Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_focus_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_all2k")
theme_override_styles/normal = SubResource("StyleBoxFlat_all2k")
text = "Settings"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_focus_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_all2k")
theme_override_styles/normal = SubResource("StyleBoxFlat_all2k")
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_focus_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_all2k")
theme_override_styles/normal = SubResource("StyleBoxFlat_all2k")
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.711
anchor_top = 0.739
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.08
offset_top = -9.08002
offset_right = -18.0
offset_bottom = -119.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_imvie")

[node name="FullScreenButton" parent="VBoxContainer2" instance=ExtResource("3_ng0o5")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="MuteButton" parent="VBoxContainer2" instance=ExtResource("4_8r73w")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
